# TinyStoriesProject

./: .gitattributes  .gitignore  README.md  batch_training_hpc.sh  create_dataset_subset.py  download_tokenizer.py  nohup.out  pyproject.toml  requirements.txt  run_grid_search.slurm  run_parallel_training.sh  run_training_encoder_hpc.sh  run_training_hpc.sh  run_training_local.sh  run_training_multi_gpu_hpc.sh  run_training_subset.sh
notebooks/: 1.0-shawn-simple_nlp_model.ipynb  2.0-shawn-new_tokenizer_model.ipynb  3.0-shawn-story_infilling_demo_bpe.ipynb
src/: bpe_tokenizer.py  compare_tokenizers.py  config.py  dataset.py  dataset_with_encoder.py  generate_story.py  grid_search_config.py  hpc_env  models.py  models_with_encoder.py  parallel_train_infilling_model.py  tokenizer.py  train_infilling_model.py  train_infilling_model_with_encoder.py
